fix login bar box-sizing on firefox

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1248,6 +1248,7 @@ body#page-login {
 			margin: 0px;
 			padding: 0px 0px 0px 20px;
 			box-sizing: border-box;
+			-moz-box-sizing: border-box;
 
 			ul { 
 				li {
